# information-retrieval-project

./: .gitignore  README.md  hello.ipynb  hello.py  main.py  milvus_demo.db  pyproject.toml  run.sh  run_minio.sh  search.py
base/: __init__.py  _core.py  _dtos.py
crawlers/: __init__.py  celery_app.py  keywords.json  tasks.py
data/: applicance.json  comic_books.json  computers.json  drone.json  fitness_trackers.json  game_controller.json  headphones.json  keyboards.json  photo_printer.json  smartwatches.json  soundbar.json  vr_gaming.json
data/sketches/: shoes_sketch.jpg:Zone.Identifier
downloaders/: image_downloader.py
embedding/: __init__.py
frontend/: app.py  config.py  product.py  style.css  testNe.py
frontend/button_handler/: diffusion_submit.py  product.py  search_products.py  testNe.py
frontend/components/: product_card.py  product_detail_card.py
pipelines/: __init__.py  _base.py  pipeline_v1.py
preprocessing/: connect_db.py  dataloader.py  drop_db.py  inference.ipynb  main.py  parse.py  preprocess.py  product.py  utils.py
scripts/: run.sh
storages/aws_s3/: config.py  s3_client.py
storages/milvus/: config.py  connection.py  insert.py  query.py  schema.py
utils/downloaders/: image_downloader.py
utils/generators/: __init__.py  _base.py  _diffuser.py  _flux.py
utils/llms/: _base.py  _ollama.py
volumes/milvus/rdb_data/: IDENTITY  LOG  LOG.old.1734023834831682  LOG.old.1734451454820886  LOG.old.1734452500342910  LOG.old.1734452541047589  LOG.old.1734632182621763  LOG.old.1734690304553240  MANIFEST-000010  MANIFEST-000012  MANIFEST-000031  (+1 more)
(+193 files in other folders)
